# TEST

./: CMakeLists.txt  hid.py  hid_win.c  readme.txt
inc/: hidapi.h
